# The-Douchebags-Open

./: .dockerignore  .env.example  .gitattributes  .gitignore  PLAN.md  README.md  compose.yaml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260423_0001_initial_schema.py  20260426_0002_add_username_to_users.py  20260426_0003_add_hole_image_path.py  20260501_0004_add_app_settings.py  20260501_0005_add_round_names_and_rosters.py  20260504_0006_add_gallery_media.py  20260505_0007_add_player_profile_fields.py  20260506_0008_add_hole_pin_coordinates.py  20260506_0009_add_may_edit_pins.py  20260508_0010_lock_hcp_on_tournament_enrollment.py  20260512_0011_bonus_award_occurrence_key.py  20260513_0012_bonus_rule_award_controls.py  20260513_0013_manual_bonus_awards.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  catalog.py  gallery.py  leaderboards.py  notifications.py  player.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  base.py  entities.py  enums.py
backend/app/schemas/: api.py
backend/app/seeds/: seed_admin.py  seed_bonus_rules.py  seed_test_data.py
backend/app/services/: appearance.py  auth.py  media.py  notifications.py  rules.py  scoring.py
backend/app/utils/: serializers.py
backend/douchebags_open_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_config.py  test_media.py  test_rules.py  test_schemas.py  test_scoring.py
db/: schema.sql
(+52 files in other folders)
